[FIXED] Clase 16: Entregable

--- a/clase_16/entregable/src/public/templates/messages.hbs
+++ b/clase_16/entregable/src/public/templates/messages.hbs
@@ -6,8 +6,8 @@
 		{{#each messages}}
 		<tr>
 			<td>•</td>
-			<td style="color: darkblue"><b>{{this.author}}</b></td>
-			<td stlye="color: brown">[{{this.date}}]: </td>
+			<td style="color: darkblue"><b>{{this.email}}</b></td>
+			<td stlye="color: brown">[{{this.send_at}}]: </td>
 			<td style="color: green"><i>{{this.message}}</i></td>
 		</tr>
 		{{/each}}
